--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>It's me, Joel</h1>
-
-<p>This is an example of static website as it only displays an empty webpage with my name and this sentence. </p>
-
-</body>
-</html>
+<h1><em>Hello</em>, guys!!</h1>
+	<h2>Lutang na ako. Please help!!!!!</h2>
+	<p>Ang dami ko pang assignment, and hindi rin ako marunong mag-drawing</p>
+	<p>BYE. Gagawa lang ako.</p>
+	<p>Kimmy lang, tinatamad pala ako</p>
